--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>React Redux React-Router with Webpack Boilerplate</title>
-    <meta name="description" content="React Redux React-Router with Webpack Boilerplate">
+    <title>Piwerko</title>
+    <meta name="description" content="Piwerko">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="../app/assets/icon.png"/>
 </head>
